Alteração na section oferta e adicionando o position fixed no header

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     </header>
 
     <section class="container_oferta">
+        <img src="./assets/cadeira.svg" alt="cadeira" class="cadeira">
         <div class="titulo_oferta">
-            <!-- <img src="./assets/cadeira.png" alt=""> -->
             <span><strong>SUPER</strong>SALE</span>
             <h3>ITENS SELECIONADOS COM ATÉ <strong class="oferta">50%OFF</strong></h3>
         </div>
