alterando os espaçamentos entres os containers

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 
     <div class="container_imagem_xicara_mesa">
-        <img src="./assets/imagem_xicara_localiza.png" alt="">
+        <img src="./assets/imagem_xicara_localiza.png" alt="xicara_na_mesa" class="xicara_na_mesa">
     </div>    
 
           
