--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <title>avanti</title>
+    <title>Avanti-E-comerce</title>
 </head>
 <body>
 
@@ -125,8 +125,6 @@
                         <a href="#">10%OFF</a>
                         <button>Comprar</button>
                     </div>
-
-                    
                 </div>
             </div>
             
@@ -319,7 +317,6 @@
                     <span> 
                         Estou de acordo com a Política de Privacidade
                     </span>
-
                 </div>     
                 <button type="submit" class=" botao_cadastrar">Cadastrar</button>
 
