adição do icone hamburguer dentro do header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
         <div class="container_navegacao">
             <ul class="lista_navegacao">
-                <li>Todas as Categorias</li>
+                <div class="conteiner_categoria">
+                    <img src="./assets/icone_hamburguer.png" alt="hamburguer" class="icone_hqamburguer">
+                    <li>Todas as Categorias</li>
+                </div>
                 <li>Departamento</li>
                 <li>Departamento</li>
                 <li>Departamento</li>
