--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="cabecalho">
             <div class="container_barra_pesquisa">
                 <img src="./assets/logo_avanti.png" alt="logo_avanti" class="logo_avanti">
-                <input type="text" placeholder="Digite aqui o que você procura">
+                <input type="text" placeholder="Digite aqui o que você procura" class="buscar_produto">
             </div>
             
             <div class="dados_usuario">
@@ -293,10 +293,10 @@
             
         </div>
         <div class="custom-button-prev">
-            <img src="./assets/icone_passar.png" alt="icone_passar">
+            <img src="./assets/icone_passar.png" alt="icone_passar" class="voltar">
         </div>
         <div class="custom-button-next">
-            <img src="./assets/icone_voltar.png" alt="icone_voltar">
+            <img src="./assets/icone_voltar.png" alt="icone_voltar" class="passar">
         </div>
 
     </section>
