--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image" href="./assets/logo_web.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <title>Avanti-E-commerce</title>
@@ -24,7 +25,7 @@
             <div class="dados_usuario">
                 <img src="./assets/icone_usuario.png" alt="icone_usuario" class="icone_usuario">
                 <h3>Olá, Alisson</h3>
-                <img src="./assets/icone_carrinho.png" alt="icone_carrinho"class="icone_usuario">
+                <img src="./assets/icone_carrinho.png" alt="carrinho_de_compras"class="icone_usuario">
                 <span>2</span>
             </div>
         </div>
@@ -33,7 +34,7 @@
             <ul class="lista_navegacao">
                 
                 <li class="container_categoria">
-                    <img src="./assets/icone_hamburguer.png" alt="hamburguer" class="icone_hamburguer">
+                    <img src="./assets/icone_hamburguer.svg" alt="hamburguer" class="icone_hamburguer">
                     <span>Todas as Categorias</span>
                 </li>
                
@@ -46,6 +47,36 @@
                 <li>Departamento</li>
                 <li>Departamento</li>
             </ul>
+        </div>
+
+        <img src="./assets/icone_hamburguer.svg" alt="hamburguer" class="btn-primary hamburguer_canvas"type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
+
+        <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+            <div class="offcanvas-header">
+                <div class="icones-canvas">
+                    <img src="./assets/icone_carrinho.png" alt="carrinho_de_compras">
+                    <span>2</span>
+                </div>
+                <div class="usuario_canvas">
+                    <img src="./assets/icone_usuario.png" alt="usuario">
+                    <h5 class="offcanvas-title">Olá Alisson</h5>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body lista_canvas">
+               <ul>
+                <li>Todas as Categorias</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+                <li>Departamento</li>
+               </ul>
+            </div>
         </div>
     </header>
 
