ajustando a largura do canvas

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body lista_canvas">
+            <div class="lista_canvas">
                <ul>
                 <li>Todas as Categorias</li>
                 <li>Departamento</li>
