troca de icones png para svg

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
         <div class="cabecalho">
             <div class="container_barra_pesquisa">
-                <img src="./assets/logo_avanti.png" alt="logo_avanti" class="logo_avanti">
+                <img src="./assets/logo_avanti.svg" alt="logo_avanti" class="logo_avanti">
                 <input type="text" placeholder="Digite aqui o que você procura" class="buscar_produto">
             </div>
             
             <div class="dados_usuario">
-                <img src="./assets/icone_usuario.png" alt="icone_usuario" class="icone_usuario">
+                <img src="./assets/icone_usuario.svg" alt="icone_usuario" class="icone_usuario">
                 <h3>Olá, Alisson</h3>
-                <img src="./assets/icone_carrinho.png" alt="carrinho_de_compras"class="icone_usuario">
+                <img src="./assets/icone_carrinho.svg" alt="carrinho_de_compras"class="icone_usuario">
                 <span>2</span>
             </div>
         </div>
@@ -54,18 +54,17 @@
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
             <div class="offcanvas-header">
                 <div class="icones-canvas">
-                    <img src="./assets/icone_carrinho.png" alt="carrinho_de_compras">
+                    <img src="./assets/icone_carrinho.svg" alt="carrinho_de_compras">
                     <span>2</span>
                 </div>
                 <div class="usuario_canvas">
-                    <img src="./assets/icone_usuario.png" alt="usuario">
+                    <img src="./assets/icone_usuario.svg" alt="usuario">
                     <h5 class="offcanvas-title">Olá Alisson</h5>
                 </div>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="lista_canvas">
-               <ul>
-                <li>Todas as Categorias</li>
+               <ul>               
                 <li>Departamento</li>
                 <li>Departamento</li>
                 <li>Departamento</li>
@@ -363,8 +362,8 @@
     <footer>
         <div class="container_sobre_nos">
             <div class="logo_rede_social">
-                <img src="./assets/logo_avanti.png" alt="logo_avanti" class="logo_avanti_rodape">
-                <img src="./assets/redes_sociais.png" alt="redes_sociais" class="redes_sociais_rodape">
+                <img src="./assets/logo_avanti.svg" alt="logo_avanti" class="logo_avanti_rodape">
+                <img src="./assets/redes_sociais.svg" alt="redes_sociais" class="redes_sociais_rodape">
             </div>
             <div class="sobre">
                 <h4>Institucional</h4>
@@ -395,7 +394,7 @@
             </div>
         </div>
         <div class="container_cartao">
-            <img src="./assets/cartao.png" alt="cartao" class="caratao">
+            <img src="./assets/cartao.svg" alt="cartao" class="caratao">
         </div>
 
         <div class="container_patriocinio">
