icone patriocionio adicionado em formato de svg

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
         <div class="container_patriocinio">
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. A rerum placeat deserunt et fugit cum soluta libero, non vitae doloremque facilis, odio exercitationem magnam illum dolor iste corporis eveniet veniam sint sapiente vero! Recusandae deserunt vero iste laudantium minus! Velit esse beatae sed quisquam sint ipsa praesentium deserunt tempore quas.</span>
-            <img src="./assets/patriocinio.png" alt="patriocionio" class="icone_patriocionio">
+            <img src="./assets/patriocinio.svg" alt="patriocionio" class="icone_patriocionio">
         </div>
 
     </footer>
