ajustes no footer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="usuario_canvas">
                     <img src="./assets/icone_usuario.svg" alt="usuario">
-                    <h5 class="offcanvas-title">Olá Alisson</h5>
+                    <h5 class="offcanvas-title">Olá, Alisson</h5>
                 </div>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
