--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </header>
 
     <section class="container_oferta">
-        <img src="./assets/cadeira.svg" alt="cadeira" class="cadeira">
+        <img src="./assets/cadeira.png" alt="cadeira" class="cadeira">
         <div class="titulo_oferta">
             <span><strong>SUPER</strong>SALE</span>
             <h3>ITENS SELECIONADOS COM ATÉ <strong class="oferta">50%OFF</strong></h3>
