--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
         <div class="cabecalho">
             <div class="container_barra_pesquisa">
-                <img src="./assets/logo_avanti.svg" alt="logo_avanti" class="logo_avanti">
+              <img src="./assets/logo_avanti.svg" alt="logo_avanti" class="logo_avanti">
+              <div class="container_input_buscar">
                 <input type="text" placeholder="Digite aqui o que você procura" class="buscar_produto">
+              </div>
             </div>
             
             <div class="dados_usuario">
