Adicionando o icone de arrow no accordion no footer versão mobile

--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
         </div>
         <div class="container_accordion_mobile">
           <div class="secao_accordion">
-            <button class="titulo_accordion">Institucional <span class="icone_seta">></span></button>
+            <button class="titulo_accordion">Institucional<img src="./assets/flecha_footer.svg" class="icone_seta"></button>
             <div class="sobre">
               <h4>Institucional</h4>
               <h5>Sobre Nós</h5>
@@ -676,7 +676,7 @@
           </div>
   
           <div class="secao_accordion">
-            <button class="titulo_accordion">Central de ajuda <span class="icone_seta">></span></button>
+            <button class="titulo_accordion">Central de ajuda <img src="./assets/flecha_footer.svg" class="icone_seta"></button>
             <div class="sobre">
               <h4>Central de Ajuda</h4>
               <h5>Fale Conosco</h5>
@@ -688,7 +688,7 @@
           </div>
   
           <div class="secao_accordion">
-            <button class="titulo_accordion">Atendimento <span class="icone_seta">></span></button>
+            <button class="titulo_accordion">Atendimento <img src="./assets/flecha_footer.svg" class="icone_seta"></button>
             <div class="sobre">
               <h4>Atendimento</h4>
               <h5><strong>Telefone:</strong> (00) 1234-5678</h5>
