Alterando o texto do container_produto no html

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       </div>
 
       <div class="texto_produto">
-        <h2>Lorem Ipsolum</h2>
+        <h2>LOREM IPUSM</h2>
         <span>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, officia neque. Totam repudiandae omnis, mollitia quibusdam pariatur quia deserunt modi explicabo suscipit assumenda, ex iste commodi? Laborum saepe aut delectus architecto odio ea nisi earum ratione facilis quaerat? Incidunt unde quia voluptate, fugiat fuga explicabo doloremque tenetur animi sed perspiciatis!
         </span>
