Ajustando o container_oferta para a responsividade mobile

--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
     <section class="container_oferta">
       <img src="./assets/cadeira.png" alt="cadeira" class="cadeira">
       <div class="titulo_oferta">
-        <span><strong>SUPER</strong>SALE</span>
-        <h3>ITENS SELECIONADOS COM ATÉ <strong class="oferta">50%OFF</strong></h3>
+        <div class="container_titulo_sale">
+          <strong>SUPER</strong>
+          <span>SALE</span>
+        </div>
+        <h3>ITENS SELECIONADOS COM ATÉ</h3>
+        <h4 class="oferta">50%OFF</h4>
       </div>
     </section>
 
