Inclusão de um botão no input de buscar  na container_input_buscar do header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <img src="./assets/logo_avanti.svg" alt="logo_avanti" class="logo_avanti">
           <div class="container_input_buscar">
             <input type="text" placeholder="Digite aqui o que você procura" class="buscar_produto">
+            <button class="botao_pesquisar"><img src="./assets/lupa.svg" alt=""></button>
           </div>
         </div>
         <div class="dados_usuario">
